--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/provider": "^2.4.2",
+    "@chakra-ui/react": "^3.14.2",
+    "@emotion/react": "^11.14.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "shadcn-ui": "^0.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
