--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
   "version": 2,
   "routes": [{ "src": "/api/(.*)", "dest": "/api/gemini.js" }]
 }
