--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ],
   "version": 2,
   "routes": [{ "src": "/api/(.*)", "dest": "/api/gemini.js" }]
 }
