--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
-  ],
   "version": 2,
-  "routes": [{ "src": "/api/(.*)", "dest": "/api/gemini.js" }]
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/gemini.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
