--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@chakra-ui/provider": "^2.4.2",
     "@chakra-ui/react": "^3.14.2",
     "@emotion/react": "^11.14.0",
+    "apexcharts": "^4.5.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
