--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
+    "react-router-hash-link": "^2.4.3",
     "shadcn-ui": "^0.9.5",
     "vite-plugin-svgr": "^4.3.0"
   },
@@ -29,6 +30,7 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-router-hash-link": "^2.4.9",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
